--- a/circle-2.0/circle-config.env
+++ b/circle-2.0/circle-config.env
@@ -1,6 +1,6 @@
 APP_HOST=127.0.0.1
 APP_PORT=8080
-APP_SECRET_KEY=circle-secret-key
+APP_SECRET_KEY=AshJ/v@!41
 APP_LOG_PATH=log/
 APP_BILL_PATH=saved-bill/
 APP_FONT_ASSET_PATH=lib/asset/font/consola.ttf
