integrate with docker

--- a/circle-2.0/.vscode/settings.json
+++ b/circle-2.0/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "goccy",
         "gocron",
+        "godotenv",
         "gofiber",
         "gorm",
         "jasonlvhit",
