--- a/circle-2.0/.env.example
+++ b/circle-2.0/.env.example
@@ -5,13 +5,13 @@ APP_LOG_PATH=log/
 APP_BILL_PATH=saved-bill/
 APP_FONT_ASSET_PATH=lib/asset/font/consola.ttf
 
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=mysql-container
 DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
 DATABASE_NAME=circle
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis-container
 REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
